--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Old School Boombox</title>
+  <title>Boombox in the Park</title>
   <style>
-    /* CSS styling for the boombox */
+    /* CSS styling for the boombox and park */
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background-color: #000;
-      color: #fff;
+      background-color: #6BBE92;
+      margin: 0;
+      padding: 0;
+    }
+    .park {
+      background-image: url('park-background.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     .boombox {
-      display: inline-block;
-      width: 400px;
+      width: 450px;
       height: 600px;
-      background-color: #222;
+      background-color: #3B574A;
       padding: 20px;
       border-radius: 10px;
+      position: relative;
     }
     .display {
       width: 100%;
@@ -24,27 +34,39 @@
       background-color: #444;
       margin-bottom: 10px;
       padding: 5px;
+      color: #FFF;
+      font-size: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .button {
       display: inline-block;
       width: 70px;
       height: 70px;
-      background-color: #666;
+      background-color: #777;
       border-radius: 50%;
       margin: 10px;
       cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #FFF;
+      font-size: 24px;
     }
   </style>
 </head>
 <body>
-  <div class="boombox">
-    <div class="display" id="display">Type something...</div>
-    <div>
-      <div class="button" onclick="changeText('Button 1')">1</div>
-      <div class="button" onclick="changeText('Button 2')">2</div>
-      <div class="button" onclick="changeText('Button 3')">3</div>
-      <div class="button" onclick="changeText('Button 4')">4</div>
-      <div class="button" onclick="changeText('Button 5')">5</div>
+  <div class="park">
+    <div class="boombox">
+      <div class="display" id="display">Type something...</div>
+      <div>
+        <div class="button" onclick="changeText('Button 1')">1</div>
+        <div class="button" onclick="changeText('Button 2')">2</div>
+        <div class="button" onclick="changeText('Button 3')">3</div>
+        <div class="button" onclick="changeText('Button 4')">4</div>
+        <div class="button" onclick="changeText('Button 5')">5</div>
+      </div>
     </div>
   </div>
 
