--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
     }
 
     .rectangle {
-      width: 200px;
-      height: 400px;
+      width: 240px;
+      height: 410px;
       background-color: #000;
+      border-radius: 20px;
+    }
+    .display {
+      width: 200px;
+      height: 205px;
+      background-color: #fff;
       border-radius: 20px;
     }
   </style>
