--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     .outer-rectangle {
       position: relative;
-      width: 231px;
-      height: 486px;
+      width: 58.6mm;
+      height: 123.4mm;
       background-color: #000;
       border-radius: 20px;
     }
@@ -26,8 +26,8 @@
       position: absolute;
       top: 20px;
       left: 20px;
-      width: 122px;
-      height: 217px;
+      width: 58.6mm - 40px;
+      height: 123.4mm - 40px;
       background-color: #fff;
       border-radius: 10px;
     }
