--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
       position: absolute;
       top: 20px;
       left: 20px;
-      width: 58.6mm - 40px;
-      height: 123.4mm - 40px;
       background-color: #fff;
       border-radius: 10px;
     }
@@ -40,7 +38,19 @@
   </div>
 
   <script>
-    // Add JavaScript code here (optional)
+    const outerRectangle = document.querySelector('.outer-rectangle');
+    const innerRectangle = document.querySelector('.inner-rectangle');
+    const borderWidth = 20; // Adjust this value if needed
+
+    const outerWidth = outerRectangle.offsetWidth;
+    const outerHeight = outerRectangle.offsetHeight;
+
+    const innerWidth = outerWidth - (borderWidth * 2);
+    const innerHeight = outerHeight - (borderWidth * 2);
+
+    innerRectangle.style.width = innerWidth + 'px';
+    innerRectangle.style.height = innerHeight + 'px';
+
   </script>
 </body>
 </html>
