--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       height: 103.5mm; /* or 4.07in */
       background-color: #000;
       border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .inner-rectangle {
-      position: absolute;
-      top: 20px;
-      left: 20px;
       width: 200px;
       height: 200px;
       background-color: #fff;
