--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       height: 103.5mm; /* or 4.07in */
       background-color: #000;
       border-radius: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
 
     .inner-rectangle {
-      width: 200px;
-      height: 200px;
+      position: absolute;
+      top: 14%;
+      left: 10%;
+      width: 80%;
+      height: 72%;
       background-color: #fff;
       border-radius: 10px;
     }
@@ -44,4 +44,3 @@
   </script>
 </body>
 </html>
-
