--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 
     .outer-rectangle {
       position: relative;
-      width: 61.8mm; /* or 2.43in */
-      height: 103.5mm; /* or 4.07in */
+      width: 61.8mm;
+      height: 103.5mm;
       background-color: #000;
       border-radius: 20px;
     }
 
     .inner-rectangle {
       position: absolute;
-      top: 14%;
-      left: 10%;
-      width: 80%;
-      height: 72%;
+      top: 18.4%;
+      left: 19.5%;
+      width: 61%;
+      height: 62.3%;
       background-color: #fff;
       border-radius: 10px;
     }
