--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 
     .outer-rectangle {
       position: relative;
-      width: 61.8mm;
-      height: 103.5mm;
+      width: 240px;
+      height: 410px;
       background-color: #000;
       border-radius: 20px;
     }
 
     .inner-rectangle {
       position: absolute;
-      top: 18.4%;
-      left: 19.5%;
-      width: 61%;
-      height: 62.3%;
+      top: 20px;
+      left: 20px;
+      width: 200px;
+      height: 200px;
       background-color: #fff;
       border-radius: 10px;
     }
   </style>
-  <title>iPod Video Template</title>
+  <title>One-Page Template</title>
 </head>
 <body>
   <div class="outer-rectangle">
