--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
     
     .content {
       display: none;
-      margin-top: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       padding: 20px;
       background-color: #eee;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     }
   </style>
 </head>
