--- a/index.html
+++ b/index.html
@@ -24,23 +24,19 @@
       font-weight: bold;
       margin-bottom: 20px;
       cursor: default;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
       animation: bounce 1s infinite alternate;
     }
     
     @keyframes bounce {
       0% {
-        transform: translate(-50%, -50%);
+        transform: translateY(0);
       }
       50% {
-        transform: translate(-50%, -60%);
+        transform: translateY(-10px);
       }
       100% {
-        transform: translate(-50%, -50%);
+        transform: translateY(0);
       }
     }
     
@@ -107,3 +103,4 @@
   </script>
 </body>
 </html>
+
