--- a/index.html
+++ b/index.html
@@ -1,103 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Portfolio</title>
+  <title>Divided Screen Template</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
 
-    #header {
+    body, html {
+      height: 100%;
+    }
+
+    .container {
       display: flex;
-      align-items: center;
-      padding: 20px;
+      height: 100%;
     }
 
-    #photo {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      margin-right: 20px;
+    .vertical-line, .horizontal-line {
+      border: 1px solid black;
     }
 
-    #name {
-      font-size: 24px;
-      font-weight: bold;
+    .vertical-line {
+      width: 33.3333%;
     }
 
-    #line {
-      width: 100%;
-      height: 2px;
-      background-color: #000;
-      margin-top: 10px;
+    .horizontal-line {
+      flex-grow: 2;
     }
 
-    #content {
-      display: flex;
-    }
-
-    #tabs {
-      width: 200px;
-      background-color: #f1f1f1;
-      padding: 20px;
-    }
-
-    .tab {
-      margin-bottom: 10px;
-      padding: 10px;
-      cursor: pointer;
-      background-color: #d9d9d9;
-    }
-
-    .tab:hover {
-      background-color: #ccc;
-    }
-
-    .tab-content {
-      display: none;
-      padding: 20px;
+    .square {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 33.3333%;
+      height: 33.3333%;
+      border: 1px solid red;
     }
   </style>
 </head>
 <body>
-  <div id="header">
-    <img id="photo" src="your_photo.jpg" alt="Your Photo">
-    <div>
-      <div id="name">Your Name</div>
-      <div id="line"></div>
-    </div>
+  <div class="container">
+    <div class="vertical-line"></div>
+    <div class="horizontal-line"></div>
   </div>
-
-  <div id="content">
-    <div id="tabs">
-      <div class="tab" onclick="showContent(1)">Tab 1</div>
-      <div class="tab" onclick="showContent(2)">Tab 2</div>
-      <div class="tab" onclick="showContent(3)">Tab 3</div>
-    </div>
-    <div id="tabContent1" class="tab-content">
-      Content for Tab 1
-    </div>
-    <div id="tabContent2" class="tab-content">
-      Content for Tab 2
-    </div>
-    <div id="tabContent3" class="tab-content">
-      Content for Tab 3
-    </div>
-  </div>
+  <div class="square"></div>
 
   <script>
-    function showContent(tabIndex) {
-      var contentElements = document.getElementsByClassName("tab-content");
-      for (var i = 0; i < contentElements.length; i++) {
-        contentElements[i].style.display = "none";
-      }
-
-      var selectedContent = document.getElementById("tabContent" + tabIndex);
-      selectedContent.style.display = "block";
-    }
+    // JavaScript code can be added here if needed
   </script>
 </body>
 </html>
-
