--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
       padding: 0;
     }
 
-    body, html {
-      height: 100%;
-    }
-
     .container {
       display: flex;
-      height: 100%;
+      width: 600px; /* Adjust the width as per your preference */
+      height: 400px; /* Adjust the height as per your preference */
     }
 
     .vertical-line, .horizontal-line {
