--- a/index.html
+++ b/index.html
@@ -17,13 +17,22 @@
       margin: 0 auto;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
       border: 2px solid #ccc;
+      padding: 0 10px;
+      box-sizing: border-box;
+    }
+
+    .vertical-line {
+      width: 2px;
+      background-color: #ccc;
     }
   </style>
 </head>
 <body>
   <div id="rectangle">
+    <div class="vertical-line"></div>
+    <div class="vertical-line"></div>
     <!-- Content goes here -->
   </div>
 
@@ -32,4 +41,3 @@
   </script>
 </body>
 </html>
-
