--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     .vertical-line {
       width: 2px;
-      background-color: #ccc;
+      height: 100%;
+      background-color: #000;
     }
   </style>
 </head>
