--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
       max-width: 600px;
       height: 100%;
       margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+      position: relative;
       border: 2px solid #ccc;
       padding: 0 10px;
       box-sizing: border-box;
@@ -27,13 +25,22 @@
       width: 2px;
       height: 100%;
       background-color: #000;
+      position: absolute;
+    }
+
+    .vertical-line.left {
+      left: 33.3333%;
+    }
+
+    .vertical-line.right {
+      right: 33.3333%;
     }
   </style>
 </head>
 <body>
   <div id="rectangle">
-    <div class="vertical-line"></div>
-    <div class="vertical-line"></div>
+    <div class="vertical-line left"></div>
+    <div class="vertical-line right"></div>
     <!-- Content goes here -->
   </div>
 
@@ -42,3 +49,4 @@
   </script>
 </body>
 </html>
+
