--- a/index.html
+++ b/index.html
@@ -26,21 +26,13 @@
       height: 100%;
       background-color: #000;
       position: absolute;
-    }
-
-    .vertical-line.left {
       left: 33.3333%;
-    }
-
-    .vertical-line.right {
-      right: 33.3333%;
     }
   </style>
 </head>
 <body>
   <div id="rectangle">
-    <div class="vertical-line left"></div>
-    <div class="vertical-line right"></div>
+    <div class="vertical-line"></div>
     <!-- Content goes here -->
   </div>
 
@@ -49,4 +41,3 @@
   </script>
 </body>
 </html>
-
