--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
       object-fit: cover;
     }
 
+    #photo::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 2px;
+      background-color: #000;
+      position: absolute;
+      bottom: -2px;
+      left: 0;
+    }
+
     #photo:hover {
       transform: scale(1.1);
       z-index: 1;
@@ -67,3 +78,4 @@
   </script>
 </body>
 </html>
+
