--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     }
 
     .horizontal-line {
-      width: 100%;
+      width: calc(100% - 33.3333%);
       height: 2px;
       background-color: #000;
       position: absolute;
       top: 170px; /* Adjust the distance below the photo as needed */
-      left: 0;
+      left: 33.3333%;
     }
 
     #photo {
