--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     }
 
     .horizontal-line {
-      width: calc(66.6666% - 33.3333%);
+      width: calc(66.6666% - 33.3333% -3);
       height: 2px;
       background-color: #000;
       position: absolute;
       top: 170px; /* Adjust the distance below the photo as needed */
-      right: 69%;
+      right: 63.6%;
     }
 
     #photo {
