--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
 
     .horizontal-line {
-      width: calc(66.6666% - 33.3333% -3);
+      width: calc(66.6666% - 33.3333% - 3%);
       height: 2px;
       background-color: #000;
       position: absolute;
