--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     }
 
     .horizontal-line {
-      width: calc(66.6666% - 35%);
+      width: calc(66.6666% - 33.3333%);
       height: 2px;
       background-color: #000;
       position: absolute;
-      top: 170px; /* Adjust the distance below the photo as needed */
-      right: 65%;
+      top: calc(10px + 150px + 10px); /* Adjust the distance below the photo as needed */
+      left: calc(33.3333% + 2px); /* Adjust the offset based on the width of the vertical line */
     }
 
     #photo {
@@ -77,3 +77,4 @@
   </script>
 </body>
 </html>
+
