--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
       height: 2px;
       background-color: #000;
       position: absolute;
-      top: calc(10px + 150px + 10px); /* Adjust the distance below the photo as needed */
-      left: calc(33.3333% + 2px); /* Adjust the offset based on the width of the vertical line */
+      top: 50%;
+      left: 33.3333%;
+      transform: translate(-50%, -50%);
     }
 
     #photo {
@@ -77,4 +78,3 @@
   </script>
 </body>
 </html>
-
