--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     #photo {
       position: absolute;
       top: 10px;
-      left: 10px;
+      left: 20px; /* Adjust the value to move the photo slightly to the right */
       width: 150px;
       height: 150px;
       border-radius: 50%;
