--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       <img src="path_to_your_photo.jpg" alt="Your Photo">
     </div>
     <div class="horizontal-line"></div>
-    <div class="tab">Tab 1</div>
-    <div class="tab" style="left: calc(33.3333% + 6px);">Tab 2</div>
-    <div class="tab" style="left: calc(66.6666% + 6px);">Tab 3</div>
+    <div class="tab" style="top: 200px;">Tab 1</div>
+    <div class="tab" style="top: 240px;">Tab 2</div>
+    <div class="tab" style="top: 280px;">Tab 3</div>
   </div>
 
   <script>
