--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       height: 100%;
       background-color: #000;
       position: absolute;
-      left: 33.3333%;
+      left: calc(33.3333% + 2px); /* Update the left value here */
     }
 
     #photo {
