--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       height: 100%;
       background-color: #000;
       position: absolute;
-      left: calc(33.3333% + 2px); /* Update the left value here */
+      left: calc(33.3333% + 2px);
     }
 
     #photo {
@@ -58,13 +58,13 @@
       background-color: #000;
       position: absolute;
       top: 170px;
-      left: 10px;
+      left: 8px; /* Update the left value here */
     }
 
     .tab {
       position: absolute;
       top: 190px;
-      left: 10px;
+      left: 8px; /* Update the left value here */
       width: calc(33.3333% - 12px);
       height: 30px;
       background-color: #f1f1f1;
