--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="floating-text">Your Text Here</div>
+    <div class="floating-text">Jacob M. Whyatt</div>
   </div>
 </body>
 </html>
