--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
       flex-grow: 1;
       padding: 10px;
       background-color: #C9C3DC;
-      transition: flex-grow 0.3s;
+      transition: transform 0.3s;
+      cursor: pointer;
     }
     
     .tab:hover {
-      flex-grow: 3;
+      transform: scale(1.2);
     }
   </style>
 </head>
@@ -58,3 +59,4 @@
   </div>
 </body>
 </html>
+
