--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       display: flex;
       justify-content: center;
       margin-top: 20px;
+      width: 600px; /* Adjust the width as needed */
     }
     
     .tab {
@@ -41,6 +42,7 @@
       background-color: #C9C3DC;
       transition: transform 0.3s;
       cursor: pointer;
+      height: 40px; /* Adjust the height as needed */
     }
     
     .tab:hover {
@@ -59,4 +61,3 @@
   </div>
 </body>
 </html>
-
