--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       height: 100vh;
       text-align: center;
+      margin-top: 20vh; /* Adjust the margin as needed */
     }
     
     .name {
@@ -32,7 +33,6 @@
     .bar {
       display: flex;
       justify-content: center;
-      margin-top: 20px;
       width: 600px; /* Adjust the width as needed */
     }
     
