--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   <div class="container">
     <div class="name">Jacob M. Whyatt</div>
     <div class="bar">
-      <div class="tab">Tab 1</div>
-      <div class="tab">Tab 2</div>
-      <div class="tab">Tab 3</div>
+      <div class="tab">Experience</div>
+      <div class="tab">Skills</div>
+      <div class="tab">Contact</div>
     </div>
   </div>
 </body>
