--- a/index.html
+++ b/index.html
@@ -105,4 +105,7 @@
     <div class="name">Jacob M. Whyatt</div>
     <div class="bar">
       <div class="tab">Tab 1</div>
-
+      <div class="tab">Tab 2</div>
+      <div class="tab">Tab 3</div>
+    </div>
+  </div>
