--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       color: #C9C3DC;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
       animation: floatAnimation 5s infinite;
+      margin-top: 20px; /* Adjust the top margin as needed */
       margin-bottom: 20px; /* Adjust the bottom margin as needed */
     }
     
@@ -51,7 +52,6 @@
       display: flex;
       justify-content: center;
       width: 600px; /* Adjust the width as needed */
-      margin-top: 20px;
       margin-bottom: 20px; /* Adjust the bottom margin as needed */
     }
     
@@ -91,21 +91,15 @@
 </head>
 <body>
   <div class="container">
-    <div class="content-container">
-      <div class="content-box">
-        <p>Content for Tab 1</p>
-      </div>
-      <div class="content-box">
-        <p>Content for Tab 2</p>
-      </div>
-      <div class="content-box">
-        <p>Content for Tab 3</p>
-      </div>
-    </div>
-    <div class="name">Jacob M. Whyatt</div>
     <div class="bar">
       <div class="tab">Tab 1</div>
       <div class="tab">Tab 2</div>
       <div class="tab">Tab 3</div>
     </div>
-  </div>
+    <div class="name">Jacob M. Whyatt</div>
+    <div class="content-container">
+      <div class="content-box">
+        <p>Content for Tab 1</p>
+      </div>
+      <div class="content-box">
+        <p>Content
