--- a/index.html
+++ b/index.html
@@ -11,22 +11,32 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      background-color: #FFEBCC;
     }
 
     .container {
       max-width: 800px;
       margin: 0 auto;
       padding: 20px;
+      background-color: #FFF;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      color: #F4AB51;
+      text-align: center;
+      margin-bottom: 30px;
     }
 
     .section {
-      border-top: 1px solid #ccc;
+      border-top: 1px solid #005B4A;
       padding-top: 20px;
       margin-top: 20px;
     }
 
     .section h2 {
       margin: 0;
+      color: #005B4A;
     }
 
     .timeline {
@@ -38,6 +48,31 @@
       margin-bottom: 20px;
     }
 
+    .timeline h3 {
+      color: #F4AB51;
+      margin: 0 0 5px;
+    }
+
+    .timeline p {
+      margin: 0;
+    }
+
+    .skills-list {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .skills-list li {
+      margin-bottom: 10px;
+      margin-right: 10px;
+      background-color: #F4AB51;
+      color: #FFF;
+      padding: 5px 10px;
+      border-radius: 4px;
+    }
+
     .contact-info ul {
       list-style: none;
       padding: 0;
@@ -45,6 +80,7 @@
 
     .contact-info li {
       margin-bottom: 10px;
+      color: #005B4A;
     }
   </style>
 </head>
@@ -72,25 +108,7 @@
 
     <div class="section">
       <h2>Skills</h2>
-      <ul>
+      <ul class="skills-list">
         <li>IT</li>
         <li>Web Development</li>
         <li>Programming</li>
-        <!-- Add more skills as needed -->
-      </ul>
-    </div>
-
-    <div class="section contact-info">
-      <h2>Contact</h2>
-      <ul>
-        <li>Email: jacob@example.com</li>
-        <li>Phone: 123-456-7890</li>
-        <li>Website: www.example.com</li>
-        <!-- Add more contact information as needed -->
-      </ul>
-    </div>
-
-  </div>
-</body>
-
-</html>
