--- a/index.html
+++ b/index.html
@@ -112,3 +112,21 @@
         <li>IT</li>
         <li>Web Development</li>
         <li>Programming</li>
+        <!-- Add more skills as needed -->
+      </ul>
+    </div>
+
+    <div class="section contact-info">
+      <h2>Contact</h2>
+      <ul>
+        <li>Email: jacob@example.com</li>
+        <li>Phone: 123-456-7890</li>
+        <li>Website: www.example.com</li>
+        <!-- Add more contact information as needed -->
+      </ul>
+    </div>
+
+  </div>
+</body>
+
+</html>
